# Sauce

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  README.md  plan  pyproject.toml
.github/workflows/: deploy.yml  fetch-logs.yml  monitor.yml  tests.yml  trading-loop.yml  update-env.yml
data/research/: equity_universe_history.template.json  strategy_profiles.json
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  audit_01_safety_risk_v2.md  audit_02_signal_quality.md  audit_03_llm_calibration.md  audit_04_operational_health.md  audit_05_setup_performance.md  audit_06_data_integrity.md  backtesting.md  debate.md  deployment.md  indicators.md  memory.md  options.md  safety.md  signals.md
sauce/: accounting.py  analyst.py  db.py  exit_monitor.py  loop.py  market_calendar.py  memory.py  morning_brief.py  options_safety.py  performance.py  reflection.py  risk.py  strategy.py
sauce/adapters/: broker.py  db.py  llm.py  market_data.py  notify.py  options_data.py  utils.py
sauce/agents/: debate.py  execution.py  exit_research.py  market_context.py  ops.py  options_execution.py  options_exit.py  options_research.py  portfolio.py  research.py  risk.py  session_boot.py  supervisor.py
sauce/backtest/: __init__.py  engine.py  models.py  options_engine.py  options_models.py
sauce/core/: calendar.py  capital.py  config.py  loop.py  metrics.py  nav.py  options_config.py  options_safety.py  options_schemas.py  regime.py  safety.py  schemas.py  screener.py  setups.py  validation.py
sauce/indicators/: __init__.py  core.py
sauce/memory/: db.py  learning.py  narrative.py  options_learning.py
sauce/prompts/: __init__.py  context.py  execution.py  options_research.py  research.py  supervisor.py  utils.py
sauce/research/: __init__.py  backtest.py  profiles.py  universe.py  walk_forward.py
sauce/signals/: __init__.py  confluence.py  options_confluence.py  timeframes.py
sauce/strategies/: __init__.py  crypto_momentum.py  equity_momentum.py  options_momentum.py
scripts/: backtest.py  bootstrap_server.sh  calibrate.py  diagnose.py  docker_healthcheck.py  health_check.sh  log_container_start.py  paper_monitor.py  performance_report.py  resume_trading.py  run_loop.sh  smoke_test.py
supabase/: config.toml
supabase/migrations/: 20260401000000_initial_schema.sql  20260402000000_harden_rls.sql  20260402010000_net_pnl_metrics.sql
tests/: conftest.py  test_accounting.py  test_agents.py  test_analyst.py  test_backtest.py  test_broker.py  test_calendar.py  test_capital.py  test_config.py  test_context_builders.py  test_db.py  test_debate.py  test_docker_healthcheck.py  test_engine.py  test_exit_monitor.py  test_exit_research.py  test_indicators.py  test_learning.py  test_llm.py  test_loop.py  test_market_context.py  test_market_data.py  test_memory.py  test_memory_db.py  test_memory_fallback.py  test_metrics.py  test_morning_brief.py  test_narrative.py  test_nav.py  test_notify.py  test_options.py  test_prompt_v2.py  test_reflection.py  test_regime.py  test_research.py  test_risk.py  test_runtime_flow.py  test_safety.py  test_schemas.py  test_screener.py  (+5 more)
(+14 files in other folders)
