[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sauce"
version = "0.1.0"
description = "Personal multi-agent AI-driven trading system"
requires-python = ">=3.13"
dependencies = [
    "alpaca-py>=0.29",
    "anthropic>=0.25",
    "sqlalchemy>=2.0",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pandas>=2.2",
    "pandas-ta>=0.3.14b",
    "pytz>=2024.1",
    "rank-bm25>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sauce*"]

# ── Ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM117"]  # Nested with statements are often clearer in tests

# ── Mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

# SQLAlchemy declarative models use Column[T] which doesn't play well with
# mypy's strict checking - the Column class descriptor magic is not understood.
[[tool.mypy.overrides]]
module = ["sauce.db", "sauce.adapters.db"]
disable_error_code = ["assignment"]

# ── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:The 'mode.copy_on_write' option is deprecated",
    "ignore:websockets.legacy is deprecated:DeprecationWarning",
    "ignore:.*np\\.bool.*:DeprecationWarning",
]
